ADD category facet

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -143,6 +143,7 @@ itemLoadingAnimationTypeSpinner = Ladeanimation mit Spinner
 itemShowCategoryImageLabel = Vorschaubild in der Kategorieansicht anzeigen
 itemShowCategoryDescriptionLabel = Beschreibung der Kategorie in der Kategorieansicht anzeigen
 itemRequireAllPropertiesLabel = Alle Bestellmerkmale erfordern, bevor ein Artikel in den Warenkorb gelegt werden kann
+itemShowCategoryFilterLabel = Kategorien als Filteroptionen bei Suchergebnissen anzeigen
 
 itemListsTab = Artikellisten
 itemListsLastSeenNumberLabel = Zuletzt angesehen: Anzahl der zuletzt angesehenen Artikel
