--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -230,6 +230,7 @@ itemCategories = "Kategorien"
 itemClose = "Schließen"
 itemExclusive = "zzgl."
 itemFilter = "Filter"
+itemFilterCategory = "Kategorien"
 itemFrom = "ab "
 itemInclVAT = "inkl. ges. MwSt."
 itemExclVAT = "zzgl. ges. MwSt."
