--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -143,6 +143,7 @@ itemLoadingAnimationTypeSpinner = Spinner
 itemShowCategoryImageLabel = Show category image in category view
 itemShowCategoryDescriptionLabel = Show category description in category view
 itemRequireAllPropertiesLabel = Require all order properties before adding an item to shopping cart
+itemShowCategoryFilterLabel = Show categories as filter options for search results
 
 itemListsTab = Item lists
 itemListsLastSeenNumberLabel = Last seen: Number of last seen items
