--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -230,6 +230,7 @@ itemCategories = "Categories"
 itemClose = "Close"
 itemExclusive = "excl."
 itemFilter = "Filter"
+itemFilterCategory = "Categories"
 itemFrom = "from "
 itemInclVAT = "Incl. VAT"
 itemExclVAT = "Excl. VAT"
