FIX item out of stock notification

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -337,13 +337,14 @@ pageNotFoundOops = "Ups, ein Fehler!"
 pageNotFoundPage = "Die Seite, die du aufgerufen hast, wurde nicht gefunden."
 ; pageNotFound - Nicht gefunden
 ; notifications - Benachrichtigungen
+notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht erreicht."
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
 notificationsCheckPassword="Die Passwörter stimmen nicht überein."
 notificationsInvalidResetPasswordUrl="Die angegebene URL ist ungültig oder abgelaufen."
-notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
 notificationsItemBundleSplitted = "Artikelpaket wurde aufgeteilt."
+notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
+notificationsItemOutOfStock = "Kein ausreichender Warenbestand vorhanden"
 notificationsNotEnoughStockItem = "Für die gewählte Artikelmenge ist nicht genügend Bestand verfügbar."
-notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht erreicht."
 ; notifications - Benachrichtigungen
 ; orderConfirmation - Auftragsbestätigung
 orderConfirmation = "Bestellbestätigung"
