--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -337,7 +337,7 @@ pageNotFoundOops = "Ups, ein Fehler!"
 pageNotFoundPage = "Die Seite, die du aufgerufen hast, wurde nicht gefunden."
 ; pageNotFound - Nicht gefunden
 ; notifications - Benachrichtigungen
-notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht erreicht."
+notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht mehr erreicht."
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
 notificationsCheckPassword="Die Passwörter stimmen nicht überein."
 notificationsInvalidResetPasswordUrl="Die angegebene URL ist ungültig oder abgelaufen."
