ADD Header widgets

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -97,3 +97,6 @@ textPlaceholder = "Über Texteditor bearbeiten"
 titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
+; Header
+topBarLabel = "Top Bar"
+navigationLabel = "Kategorie-Navigation"
