--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -97,3 +97,6 @@ textPlaceholder = "Edit via text editor"
 titleBarLabel = "Title bar"
 titleBarTextLabel = "Title bar text"
 titleBarTextTooltip = "Enter the title bar text."
+; Header
+topBarLabel = "Top Bar"
+navigationLabel = "Category navigation"
