ADD address template for pickup station

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,5 +1,11 @@
 ; address - Addressen
+addressPostOffice = "Postfiliale"
+addressPackingStation = "Packstation"
+addressPackingStationNumber = "Filialnummer"
+addressPostOfficeNumber = "Packstationsnummer"
+addressPostNummer = "PostNummer"
 addressAddAddress = "Neue Adresse"
+addressPickupLocation = "Abholort"
 addressAdditionalAddress1 = "Adresszusatz 1"
 addressAdditionalAddress2 = "Adresszusatz 2"
 addressAdditionalName = "Namenszusatz"
