--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -1,5 +1,11 @@
 ; address - Address
+addressPostOffice = "Postfiliale"
+addressPackingStation = "Packstation"
+addressPackingStationNumber = "Filialnummer"
+addressPostOfficeNumber = "Packstationsnummer"
+addressPostNummer = "PostNummer"
 addressAddAddress = "New address"
+addressPickupLocation = "Pickup location"
 addressAdditionalAddress1 = "Additional address information 1"
 addressAdditionalAddress2 = "Additional address information 2"
 addressAdditionalName = "Additional name"
