--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -97,6 +97,26 @@ textPlaceholder = "Über Texteditor bearbeiten"
 titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
-; Header
+; Top bar
 topBarLabel = "Top Bar"
+topBarEnableLoginLabel = "Kunden-Login anzeigen"
+topBarEnableLoginTooltip = "Kunden-Login in der Toolbar anzeigen"
+topBarEnableRegistrationLabel = "Kunden-Registrierung anzeigen"
+topBarEnableRegistrationTooltip = "Kunden-Registrierung in der Toolbar anzeigen"
+topBarEnableLanguageSelectLabel = "Sprachauswahl anzeigen"
+topBarEnableLanguageSelectTooltip = "Sprachauswahl in der Toolbar anzeigen"
+topBarEnableShippingCountrySelectLabel = "Lieferlandauswahl anzeigen"
+topBarEnableShippingCountrySelectTooltip = "Lieferlandauswahl in der Toolbar anzeigen"
+topBarEnableCurrencySelectLabel = "Währungsauswahl anzeigen"
+topBarEnableCurrencySelectTooltip = "Auswahl der verfügbaren Währungen anzeigen"
+topBarSearchStyleLabel = "Darstellung der Suche"
+topBarSearchStyleTooltip = "Darstellung der Suche in der Kopfzeile"
+topBarSearchStyleHidden = "Nicht anzeigen"
+topBarSearchStyleOnDemand = "Suche einklappen"
+topBarSearchStylePermanent = "Suche dauerhaft anzeigen"
+topBarEnableWishListLabel = "Wunschliste anzeigen"
+topBarEnableWishListTooltip = "Wunschliste des aktuellen Besuchers anzeigen"
+topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
+topBarEnableBasketPreviewTooltip = "Warenkorbvorschau des aktuellen Besuchers anzeigen"
+; Navigation
 navigationLabel = "Kategorie-Navigation"
