--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -120,3 +120,21 @@ topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
 topBarEnableBasketPreviewTooltip = "Warenkorbvorschau des aktuellen Besuchers anzeigen"
 ; Navigation
 navigationLabel = "Kategorie-Navigation"
+navigationNavigationStyleLabel = "Stil der Kategorie-Navigation"
+navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation"
+navigationNavigationStyleNormal = "Normal"
+navigationNavigationStyleMegaMenu = "Mega Menü"
+navigationMegaMenuLevelsLabel = "Kategorieebenen des Megamenüs"
+navigationMegaMenuLevelsTooltip = "Kategorieebenen des Megamenüs"
+navigationMegaMenuLevels2 = "2"
+navigationMegaMenuLevels3 = "3"
+navigationMegaMenuLevels4 = "4"
+navigationMegaMenuMaxItemsLabel = "Anzahl der Kategorien"
+navigationMegaMenuMaxItemsStage1Label = "Kategorien auf Ebene 2"
+navigationMegaMenuMaxItemsStage1Tooltip = "Anzahl der Kategorien in der zweiten Ebene"
+navigationMegaMenuMaxItemsStage2Label = "Kategorien auf Ebene 3"
+navigationMegaMenuMaxItemsStage2Tooltip = "Anzahl der Kategorien in der dritten Ebene"
+navigationMegaMenuMaxItemsStage3Label = "Kategorien auf Ebene 4"
+navigationMegaMenuMaxItemsStage3Tooltip = "Anzahl der Kategorien in der vierten Ebene"
+navigationCompanyLogoUrlLabel = "Firmenlogo"
+navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop"
