UPDATE widget translations

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -2,12 +2,23 @@
 widgetAppearanceDanger = "Gefahr"
 widgetAppearanceInfo = "Information"
 widgetAppearanceLabel = "Erscheinungsbild"
+widgetAppearanceNone = "Ohne"
 widgetAppearancePrimary = "Primär"
 widgetAppearanceSecondary = "Sekundär"
 widgetAppearanceSuccess = "Erfolg"
 widgetAppearanceTooltip = "Grundfarbe für das Erscheinungsbild des Elements wählen."
 widgetAppearanceWarning = "Warnung"
-widgetAppearanceNone = "Ohne"
+widgetIconCheck = "Haken"
+widgetIconCircle = "Kreis (gefüllt)"
+widgetIconCircleThin = "Kreis (leer)"
+widgetIconComment = "Sprechblase"
+widgetIconCreditcard = "Kreditkarte"
+widgetIconDollar = "Dollar-Symbol"
+widgetIconEnvelope = "Briefumschlag"
+widgetIconEuro = "Euro-Symbol"
+widgetIconHeart = "Herz"
+widgetIconNone = "Ohne"
+widgetIconThumbsUp = "Daumen hoch"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
@@ -89,6 +100,21 @@ itemVariationCustomNumber_asc = "Variantennummer ⬆"
 itemVariationCustomNumber_desc = "Variantennummer ⬇"
 itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
+; Link list
+linkListLabel = "Linkliste"
+linkListTitleLabel = "Listentitel"
+linkListTitleTooltip = "Titel für die Linkliste eingeben."
+linkListEntryLabel = "Listeneintrag"
+linkListEntryNameLabel = "Angezeigter Text"
+linkListEntryNameTooltip = "Text eingeben, der auf die URL verlinkt."
+linkListEntryUrlLabel = "URL"
+linkListEntryUrlTooltip = "URL eingeben."
+; List
+listIconLabel = "Icon"
+listIconTooltip = "Icon für Listeneinträge auswählen."
+listLabel = "Liste"
+listTextLabel = "Listeneintrag"
+listTextTooltip = "Text für einen Listeneintrag eingeben."
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
@@ -138,3 +164,5 @@ navigationMegaMenuMaxItemsStage3Label = "Kategorien auf Ebene 4"
 navigationMegaMenuMaxItemsStage3Tooltip = "Anzahl der Kategorien in der vierten Ebene"
 navigationCompanyLogoUrlLabel = "Firmenlogo"
 navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop"
+; Separator
+separatorLabel = "Trennlinie"
