ADD missing properties

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -125,27 +125,22 @@ titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
 ; Top bar
 topBarLabel = "Top Bar"
+topBarIsFixedLabel = "Beim Scrollen der Seite fixieren"
 topBarEnableLoginLabel = "Kunden-Login anzeigen"
-topBarEnableLoginTooltip = "Kunden-Login in der Toolbar anzeigen"
 topBarEnableRegistrationLabel = "Kunden-Registrierung anzeigen"
-topBarEnableRegistrationTooltip = "Kunden-Registrierung in der Toolbar anzeigen"
 topBarEnableLanguageSelectLabel = "Sprachauswahl anzeigen"
-topBarEnableLanguageSelectTooltip = "Sprachauswahl in der Toolbar anzeigen"
 topBarEnableShippingCountrySelectLabel = "Lieferlandauswahl anzeigen"
-topBarEnableShippingCountrySelectTooltip = "Lieferlandauswahl in der Toolbar anzeigen"
 topBarEnableCurrencySelectLabel = "Währungsauswahl anzeigen"
-topBarEnableCurrencySelectTooltip = "Auswahl der verfügbaren Währungen anzeigen"
 topBarSearchStyleLabel = "Darstellung der Suche"
 topBarSearchStyleTooltip = "Darstellung der Suche in der Kopfzeile"
 topBarSearchStyleHidden = "Nicht anzeigen"
 topBarSearchStyleOnDemand = "Suche einklappen"
 topBarSearchStylePermanent = "Suche dauerhaft anzeigen"
 topBarEnableWishListLabel = "Wunschliste anzeigen"
-topBarEnableWishListTooltip = "Wunschliste des aktuellen Besuchers anzeigen"
 topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
-topBarEnableBasketPreviewTooltip = "Warenkorbvorschau des aktuellen Besuchers anzeigen"
 ; Navigation
 navigationLabel = "Kategorie-Navigation"
+navigationIsFixedLabel = "Beim Scrollen der Seite fixieren"
 navigationNavigationStyleLabel = "Stil der Kategorie-Navigation"
 navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation"
 navigationNavigationStyleNormal = "Normal"
@@ -164,5 +159,10 @@ navigationMegaMenuMaxItemsStage3Label = "Kategorien auf Ebene 4"
 navigationMegaMenuMaxItemsStage3Tooltip = "Anzahl der Kategorien in der vierten Ebene"
 navigationCompanyLogoUrlLabel = "Firmenlogo"
 navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop"
+; Breadcrumb
+breadcrumbIsFixedLabel = "Beim Scrollen der Seite fixieren"
+breadcrumbShowOnHomepageLabel = "Auf der Startseite anzeigen"
+breadcrumbShowOnMyAccountLabel = "Im Mein-Konto-Bereich anzeigen"
+breadcrumbShowOnCheckoutLabel = "In der Kasse anzeigen"
 ; Separator
 separatorLabel = "Trennlinie"
