CHANGE LinkListWidget - add setting to choose an list icon (similar to the ListWidget)

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -101,14 +101,16 @@ itemVariationCustomNumber_desc = "Variantennummer ⬇"
 itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
 ; Link list
-linkListLabel = "Linkliste"
-linkListTitleLabel = "Listentitel"
-linkListTitleTooltip = "Titel für die Linkliste eingeben."
 linkListEntryLabel = "Listeneintrag"
 linkListEntryNameLabel = "Angezeigter Text"
 linkListEntryNameTooltip = "Text eingeben, der auf die URL verlinkt."
 linkListEntryUrlLabel = "URL"
 linkListEntryUrlTooltip = "URL eingeben."
+linkListIconLabel = "Icon"
+linkListIconTooltip = "Icon für Listeneinträge auswählen."
+linkListLabel = "Linkliste"
+linkListTitleLabel = "Listentitel"
+linkListTitleTooltip = "Titel für die Linkliste eingeben."
 ; List
 listIconLabel = "Icon"
 listIconTooltip = "Icon für Listeneinträge auswählen."
