--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -168,3 +168,10 @@ breadcrumbShowOnMyAccountLabel = "Im Mein-Konto-Bereich anzeigen"
 breadcrumbShowOnCheckoutLabel = "In der Kasse anzeigen"
 ; Separator
 separatorLabel = "Trennlinie"
+; Container
+containerHeader = "Kopfzeile"
+containerFooter = "Fußzeile"
+containerHomepage = "Startseite"
+presetHeaderDefault = "Standard-Kopfzeile"
+presetFooterDefault = "Standard-Fußzeile"
+presetHomepageDefault = "Standard-Startseite"
