ADD preset for default header

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -140,6 +140,11 @@ topBarSearchStyleOnDemand = "Suche einklappen"
 topBarSearchStylePermanent = "Suche dauerhaft anzeigen"
 topBarEnableWishListLabel = "Wunschliste anzeigen"
 topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
+topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
+topBarBasketValuesTooltip = "Warenkorbinformationen anzeigen"
+topBarBasketValuesSum = "Warenwert"
+topBarBasketValuesQuantity = "Anzahl der Artikel"
+topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
 ; Navigation
 navigationLabel = "Kategorie-Navigation"
 navigationIsFixedLabel = "Beim Scrollen der Seite fixieren"
