CHANGE checkbox naming

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -6,7 +6,7 @@ addressPostOfficeNumber = "Packstationsnummer"
 addressPostNummer = "PostNummer"
 addressAddAddress = "New address"
 addressPickupLocation = "Pickup location"
-addressToPickupStation = "An Packstation senden"
+addressToPickupStation = "An Packstation/Postfiliale senden"
 addressAdditionalAddress1 = "Additional address information 1"
 addressAdditionalAddress2 = "Additional address information 2"
 addressAdditionalName = "Additional name"
