--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -6,7 +6,7 @@ addressPostOfficeNumber = "Packstationsnummer"
 addressPostNummer = "PostNummer"
 addressAddAddress = "Neue Adresse"
 addressPickupLocation = "Abholort"
-addressToPickupStation = "An Packstation senden"
+addressToPickupStation = "An Packstation/Postfiliale senden"
 addressAdditionalAddress1 = "Adresszusatz 1"
 addressAdditionalAddress2 = "Adresszusatz 2"
 addressAdditionalName = "Namenszusatz"
