ADD support for ceres default header

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -138,6 +138,8 @@ topBarSearchStyleTooltip = "Darstellung der Suche in der Kopfzeile"
 topBarSearchStyleHidden = "Nicht anzeigen"
 topBarSearchStyleOnDemand = "Suche einklappen"
 topBarSearchStylePermanent = "Suche dauerhaft anzeigen"
+topBarShowItemImagesLabel = "Artikelbilder in Suchvorschlägen anzeigen"
+topBarForwardToSingleItemLabel = "Artikelsuche: Zur Artikeleinzelansicht weiterleiten"
 topBarEnableWishListLabel = "Wunschliste anzeigen"
 topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
 topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
