ADD Translations for LegalInformationWidget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -180,3 +180,14 @@ containerHomepage = "Startseite"
 presetHeaderDefault = "Standard-Kopfzeile"
 presetFooterDefault = "Standard-Fußzeile"
 presetHomepageDefault = "Standard-Startseite"
+; Legal information
+legalInformationLabel = "Legal Information"
+legalInformationShowCancellationLabel = "Zeige Wiederufsrecht"
+legalInformationShowLegalDisclosureLabel = "Zeige Impressum"
+legalInformationShowPrivacyPolicyLabel = "Zeige Datenschutzerklärung"
+legalInformationShowGtcLabel = "Zeige AGB"
+legalInformationCancellationFormContainerLabel = "Wiederrufsformular"
+legalInformationShowCancellationFormLabel = "Zeige Wiederrufsformular"
+legalInformationCancellationPdfActiveLabel = "Nutze PDF als Formular"
+legalInformationCancellationPdfUploadLabel = "PDF Auswahl"
+legalInformationCancellationPdfUploadTooltip = "PDF für das Wiederrufsformular auswählen."
