--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,4 +1,6 @@
 ; address - Addressen
+addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Anschrift nicht unterstützt."
+addressShippingChangedWarning="Ihr Versandprofil wurde gewechselt, da die ausgewählte Adresse diese Art von Versandprofil nicht unterstützt."
 addressPostOffice = "Postfiliale"
 addressPackingStation = "Packstation"
 addressPackingStationNumber = "Filialnummer"
