--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,12 +1,12 @@
 ; address - Addressen
-addressSelectedNotAllowed = "Für die Ausgewählte Adresse existiert kein passendes Versandprofil"
-addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Anschrift nicht unterstützt."
+addressSelectedNotAllowed = "Für die ausgewählte Adresse existiert kein passendes Versandprofil."
+addressChangedWarning="hre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Lieferziel nicht unterstützt."
 addressShippingChangedWarning="Ihr Versandprofil wurde gewechselt, da die ausgewählte Adresse diese Art von Versandprofil nicht unterstützt."
 addressPostOffice = "Postfiliale"
 addressPackingStation = "Packstation"
-addressPackingStationNumber = "Filialnummer"
-addressPostOfficeNumber = "Packstationsnummer"
-addressPostNummer = "PostNummer"
+addressPackingStationNumber = "Packstationsnummer"
+addressPostOfficeNumber = "Filialnummer"
+addressPostNummer = "Postnummer"
 addressAddAddress = "Neue Adresse"
 addressPickupLocation = "Abholort"
 addressToPickupStation = "An Packstation/Postfiliale senden"
