--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -1,15 +1,15 @@
 ; address - Address
-addressSelectedNotAllowed = "Für die Ausgewählte Adresse existiert kein passendes Versandprofil"
-addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Anschrift nicht unterstützt."
-addressShippingChangedWarning="Ihr Versandprofil wurde gewechselt, da die ausgewählte Adresse diese Art von Versandprofil nicht unterstützt."
-addressPostOffice = "Postfiliale"
+addressSelectedNotAllowed = "There is no applicable shipping profile for the selected address."
+addressChangedWarning="Your address has been changed since the selected shipping profile does not support this type of delivery destination."
+addressShippingChangedWarning="Your shipping profile has been changed since the selected address does not support this type of shipping profile."
+addressPostOffice = "Post office"
 addressPackingStation = "Packstation"
-addressPackingStationNumber = "Filialnummer"
-addressPostOfficeNumber = "Packstationsnummer"
-addressPostNummer = "PostNummer"
+addressPackingStationNumber = "Packstation number"
+addressPostOfficeNumber = "Branch number"
+addressPostNummer = "Post number"
 addressAddAddress = "New address"
 addressPickupLocation = "Pickup location"
-addressToPickupStation = "An Packstation/Postfiliale senden"
+addressToPickupStation = "Deliver to Packstation/post office"
 addressAdditionalAddress1 = "Additional address information 1"
 addressAdditionalAddress2 = "Additional address information 2"
 addressAdditionalName = "Additional name"
