CHANGE Widget.properties - implement new widget translations

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -13,9 +13,9 @@ widgetIconCircle = "Kreis (gefüllt)"
 widgetIconCircleThin = "Kreis (leer)"
 widgetIconComment = "Sprechblase"
 widgetIconCreditcard = "Kreditkarte"
-widgetIconDollar = "Dollar-Symbol"
+widgetIconDollar = "Dollarzeichen"
 widgetIconEnvelope = "Briefumschlag"
-widgetIconEuro = "Euro-Symbol"
+widgetIconEuro = "Eurozeichen"
 widgetIconHeart = "Herz"
 widgetIconNone = "Ohne"
 widgetIconThumbsUp = "Daumen hoch"
@@ -100,6 +100,17 @@ itemVariationCustomNumber_asc = "Variantennummer ⬆"
 itemVariationCustomNumber_desc = "Variantennummer ⬇"
 itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
 itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
+; Legal information
+legalInformationCancellationFormContainerLabel = "Widerrufsformular"
+legalInformationCancellationPdfActiveLabel = "PDF-Datei als Formular verwenden"
+legalInformationCancellationPdfUploadLabel = "PDF-Auswahl"
+legalInformationCancellationPdfUploadTooltip = "PDF-Datei für das Widerrufsformular auswählen."
+legalInformationLabel = "Rechtliche Informationen"
+legalInformationShowCancellationFormLabel = "Widerrufsformular sichtbar machen"
+legalInformationShowCancellationLabel = "Widerrufsrecht sichtbar machen"
+legalInformationShowGtcLabel = "AGB sichtbar machen"
+legalInformationShowLegalDisclosureLabel = "Impressum sichtbar machen"
+legalInformationShowPrivacyPolicyLabel = "Datenschutzerklärung sichtbar machen"
 ; Link list
 linkListEntryLabel = "Listeneintrag"
 linkListEntryNameLabel = "Angezeigter Text"
@@ -127,14 +138,14 @@ titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
 ; Top bar
 topBarLabel = "Top Bar"
-topBarIsFixedLabel = "Beim Scrollen der Seite fixieren"
+topBarIsFixedLabel = "Beim Scrollen der Seite fixieren."
 topBarEnableLoginLabel = "Kunden-Login anzeigen"
 topBarEnableRegistrationLabel = "Kunden-Registrierung anzeigen"
 topBarEnableLanguageSelectLabel = "Sprachauswahl anzeigen"
 topBarEnableShippingCountrySelectLabel = "Lieferlandauswahl anzeigen"
 topBarEnableCurrencySelectLabel = "Währungsauswahl anzeigen"
-topBarSearchStyleLabel = "Darstellung der Suche"
-topBarSearchStyleTooltip = "Darstellung der Suche in der Kopfzeile"
+topBarSearchStyleLabel = "Anzeige der Suche"
+topBarSearchStyleTooltip = "Anzeige der Suche einstellen."
 topBarSearchStyleHidden = "Nicht anzeigen"
 topBarSearchStyleOnDemand = "Suche einklappen"
 topBarSearchStylePermanent = "Suche dauerhaft anzeigen"
@@ -143,35 +154,35 @@ topBarForwardToSingleItemLabel = "Artikelsuche: Zur Artikeleinzelansicht weiterl
 topBarEnableWishListLabel = "Wunschliste anzeigen"
 topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
 topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
-topBarBasketValuesTooltip = "Warenkorbinformationen anzeigen"
+topBarBasketValuesTooltip = "Anzeige der Warenkorbvorschau wählen."
 topBarBasketValuesSum = "Warenwert"
 topBarBasketValuesQuantity = "Anzahl der Artikel"
 topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
 ; Navigation
 navigationLabel = "Kategorie-Navigation"
-navigationIsFixedLabel = "Beim Scrollen der Seite fixieren"
+navigationIsFixedLabel = "Beim Scrollen der Seite fixieren."
 navigationNavigationStyleLabel = "Stil der Kategorie-Navigation"
-navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation"
+navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleMegaMenu = "Mega Menü"
-navigationMegaMenuLevelsLabel = "Kategorieebenen des Megamenüs"
-navigationMegaMenuLevelsTooltip = "Kategorieebenen des Megamenüs"
+navigationMegaMenuLevelsLabel = "Kategorieebene des Mega-Menüs"
+navigationMegaMenuLevelsTooltip = "Kategorieebene des Mega-Menüs begrenzen."
 navigationMegaMenuLevels2 = "2"
 navigationMegaMenuLevels3 = "3"
 navigationMegaMenuLevels4 = "4"
 navigationMegaMenuMaxItemsLabel = "Anzahl der Kategorien"
-navigationMegaMenuMaxItemsStage1Label = "Kategorien auf Ebene 2"
-navigationMegaMenuMaxItemsStage1Tooltip = "Anzahl der Kategorien in der zweiten Ebene"
-navigationMegaMenuMaxItemsStage2Label = "Kategorien auf Ebene 3"
-navigationMegaMenuMaxItemsStage2Tooltip = "Anzahl der Kategorien in der dritten Ebene"
-navigationMegaMenuMaxItemsStage3Label = "Kategorien auf Ebene 4"
-navigationMegaMenuMaxItemsStage3Tooltip = "Anzahl der Kategorien in der vierten Ebene"
+navigationMegaMenuMaxItemsStage1Label = "Kategorien in Ebene 2"
+navigationMegaMenuMaxItemsStage1Tooltip = "Anzahl der Kategorien in der zweiten Ebene wählen."
+navigationMegaMenuMaxItemsStage2Label = "Kategorien in Ebene 3"
+navigationMegaMenuMaxItemsStage2Tooltip = "Anzahl der Kategorien in der dritten Ebene wählen."
+navigationMegaMenuMaxItemsStage3Label = "Kategorien in Ebene 4"
+navigationMegaMenuMaxItemsStage3Tooltip = "Anzahl der Kategorien in der vierten Ebene wählen."
 navigationCompanyLogoUrlLabel = "Firmenlogo"
-navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop"
+navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop wählen."
 ; Breadcrumb
 breadcrumbIsFixedLabel = "Beim Scrollen der Seite fixieren"
 breadcrumbShowOnHomepageLabel = "Auf der Startseite anzeigen"
-breadcrumbShowOnMyAccountLabel = "Im Mein-Konto-Bereich anzeigen"
+breadcrumbShowOnMyAccountLabel = "Im Bereich Mein Konto anzeigen"
 breadcrumbShowOnCheckoutLabel = "In der Kasse anzeigen"
 ; Separator
 separatorLabel = "Trennlinie"
@@ -182,14 +193,3 @@ containerHomepage = "Startseite"
 presetHeaderDefault = "Standard-Kopfzeile"
 presetFooterDefault = "Standard-Fußzeile"
 presetHomepageDefault = "Standard-Startseite"
-; Legal information
-legalInformationLabel = "Legal Information"
-legalInformationShowCancellationLabel = "Zeige Wiederufsrecht"
-legalInformationShowLegalDisclosureLabel = "Zeige Impressum"
-legalInformationShowPrivacyPolicyLabel = "Zeige Datenschutzerklärung"
-legalInformationShowGtcLabel = "Zeige AGB"
-legalInformationCancellationFormContainerLabel = "Wiederrufsformular"
-legalInformationShowCancellationFormLabel = "Zeige Wiederrufsformular"
-legalInformationCancellationPdfActiveLabel = "Nutze PDF als Formular"
-legalInformationCancellationPdfUploadLabel = "PDF Auswahl"
-legalInformationCancellationPdfUploadTooltip = "PDF für das Wiederrufsformular auswählen."
