--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,6 +1,6 @@
 ; address - Addressen
 addressSelectedNotAllowed = "Für die ausgewählte Adresse existiert kein passendes Versandprofil."
-addressChangedWarning="hre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Lieferziel nicht unterstützt."
+addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Lieferziel nicht unterstützt."
 addressShippingChangedWarning="Ihr Versandprofil wurde gewechselt, da die ausgewählte Adresse diese Art von Versandprofil nicht unterstützt."
 addressPostOffice = "Postfiliale"
 addressPackingStation = "Packstation"
