--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,3 +1,16 @@
+; Breadcrumb
+breadcrumbIsFixedLabel = "Beim Scrollen der Seite fixieren"
+breadcrumbLabel = "Breadcrumb-Navigation"
+breadcrumbShowOnCheckoutLabel = "In der Kasse anzeigen"
+breadcrumbShowOnHomepageLabel = "Auf der Startseite anzeigen"
+breadcrumbShowOnMyAccountLabel = "Im Bereich Mein Konto anzeigen"
+; Container
+containerFooter = "Fußzeile"
+containerHeader = "Kopfzeile"
+containerHomepage = "Startseite"
+presetFooterDefault = "Standard-Fußzeile"
+presetHeaderDefault = "Standard-Kopfzeile"
+presetHomepageDefault = "Standard-Startseite"
 ; Global
 widgetAppearanceDanger = "Gefahr"
 widgetAppearanceInfo = "Information"
@@ -137,39 +150,37 @@ titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
 ; Top bar
-topBarLabel = "Top Bar"
-topBarIsFixedLabel = "Beim Scrollen der Seite fixieren."
+topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
+topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
+topBarBasketValuesQuantity = "Anzahl der Artikel"
+topBarBasketValuesSum = "Warenwert"
+topBarBasketValuesTooltip = "Anzeige der Warenkorbvorschau wählen."
+topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
+topBarEnableCurrencySelectLabel = "Währungsauswahl anzeigen"
+topBarEnableLanguageSelectLabel = "Sprachauswahl anzeigen"
 topBarEnableLoginLabel = "Kunden-Login anzeigen"
 topBarEnableRegistrationLabel = "Kunden-Registrierung anzeigen"
-topBarEnableLanguageSelectLabel = "Sprachauswahl anzeigen"
 topBarEnableShippingCountrySelectLabel = "Lieferlandauswahl anzeigen"
-topBarEnableCurrencySelectLabel = "Währungsauswahl anzeigen"
-topBarSearchStyleLabel = "Anzeige der Suche"
-topBarSearchStyleTooltip = "Anzeige der Suche einstellen."
+topBarEnableWishListLabel = "Wunschliste anzeigen"
+topBarForwardToSingleItemLabel = "Artikelsuche: zur Artikelansicht weiterleiten"
+topBarIsFixedLabel = "Beim Scrollen der Seite fixieren."
+topBarLabel = "Top Bar"
 topBarSearchStyleHidden = "Nicht anzeigen"
+topBarSearchStyleLabel = "Anzeige der Suche"
 topBarSearchStyleOnDemand = "Suche einklappen"
 topBarSearchStylePermanent = "Suche dauerhaft anzeigen"
+topBarSearchStyleTooltip = "Anzeige der Suche einstellen."
 topBarShowItemImagesLabel = "Artikelbilder in Suchvorschlägen anzeigen"
-topBarForwardToSingleItemLabel = "Artikelsuche: Zur Artikeleinzelansicht weiterleiten"
-topBarEnableWishListLabel = "Wunschliste anzeigen"
-topBarEnableBasketPreviewLabel = "Warenkorbvorschau anzeigen"
-topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
-topBarBasketValuesTooltip = "Anzeige der Warenkorbvorschau wählen."
-topBarBasketValuesSum = "Warenwert"
-topBarBasketValuesQuantity = "Anzahl der Artikel"
-topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
 ; Navigation
-navigationLabel = "Kategorie-Navigation"
+navigationCompanyLogoUrlLabel = "Firmenlogo"
+navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop wählen."
 navigationIsFixedLabel = "Beim Scrollen der Seite fixieren."
-navigationNavigationStyleLabel = "Stil der Kategorie-Navigation"
-navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
-navigationNavigationStyleNormal = "Normal"
-navigationNavigationStyleMegaMenu = "Mega Menü"
-navigationMegaMenuLevelsLabel = "Kategorieebene des Mega-Menüs"
-navigationMegaMenuLevelsTooltip = "Kategorieebene des Mega-Menüs begrenzen."
+navigationLabel = "Kategorie-Navigation"
 navigationMegaMenuLevels2 = "2"
 navigationMegaMenuLevels3 = "3"
 navigationMegaMenuLevels4 = "4"
+navigationMegaMenuLevelsLabel = "Kategorieebenen des Mega-Menüs"
+navigationMegaMenuLevelsTooltip = "Kategorieebenen des Mega-Menüs begrenzen."
 navigationMegaMenuMaxItemsLabel = "Anzahl der Kategorien"
 navigationMegaMenuMaxItemsStage1Label = "Kategorien in Ebene 2"
 navigationMegaMenuMaxItemsStage1Tooltip = "Anzahl der Kategorien in der zweiten Ebene wählen."
@@ -177,19 +188,9 @@ navigationMegaMenuMaxItemsStage2Label = "Kategorien in Ebene 3"
 navigationMegaMenuMaxItemsStage2Tooltip = "Anzahl der Kategorien in der dritten Ebene wählen."
 navigationMegaMenuMaxItemsStage3Label = "Kategorien in Ebene 4"
 navigationMegaMenuMaxItemsStage3Tooltip = "Anzahl der Kategorien in der vierten Ebene wählen."
-navigationCompanyLogoUrlLabel = "Firmenlogo"
-navigationCompanyLogoUrlTooltip = "Firmenlogo zur Anzeige in ihrem Webshop wählen."
-; Breadcrumb
-breadcrumbIsFixedLabel = "Beim Scrollen der Seite fixieren"
-breadcrumbShowOnHomepageLabel = "Auf der Startseite anzeigen"
-breadcrumbShowOnMyAccountLabel = "Im Bereich Mein Konto anzeigen"
-breadcrumbShowOnCheckoutLabel = "In der Kasse anzeigen"
+navigationNavigationStyleLabel = "Stil der Kategorie-Navigation"
+navigationNavigationStyleMegaMenu = "Mega Menü"
+navigationNavigationStyleNormal = "Normal"
+navigationNavigationStyleTooltip = "Stil der Kategorie-Navigation wählen."
 ; Separator
 separatorLabel = "Trennlinie"
-; Container
-containerHeader = "Kopfzeile"
-containerFooter = "Fußzeile"
-containerHomepage = "Startseite"
-presetHeaderDefault = "Standard-Kopfzeile"
-presetFooterDefault = "Standard-Fußzeile"
-presetHomepageDefault = "Standard-Startseite"
