ADD random sorting ADD sorting for tag lists and cross selling lists

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -146,11 +146,13 @@ itemRequireAllPropertiesLabel = Alle Bestellmerkmale erfordern, bevor ein Artike
 itemShowCategoryFilterLabel = Kategorien als Filteroptionen bei Suchergebnissen anzeigen
 
 itemListsTab = Artikellisten
+itemListsTagSortingLabel = Tags: Sortierung
 itemListsLastSeenNumberLabel = Zuletzt angesehen: Anzahl der zuletzt angesehenen Artikel
 itemListsLastSeenNumber4 = 4
 itemListsLastSeenNumber8 = 8
 itemListsLastSeenNumber12 = 12
 itemListsCrossSellingTypeLabel = Cross-Selling: Cross-Selling-Beziehung
+itemListsCrossSellingSortingLabel = Cross-Selling: Sortierung
 itemListsCrossSellingTypeSimilar = Ähnlich
 itemListsCrossSellingTypeAccessory = Zubehör
 itemListsCrossSellingTypeReplacementPart = Ersatzteil
@@ -231,6 +233,7 @@ sortDataVariationUpdatedAtDesc = Zuerst aktualisierte Variante zuerst
 sortDataManufacturerAsc = Hersteller A-Z
 sortDataManufacturerDesc = Hersteller Z-A
 sortDataItemScore = Relevanz
+sortDataRandom = Zufällig
 sortDefaultSortingLabel = Standardsortierungswert in der Kategorieansicht
 sortingPriorityCategory1Label = Empfohlene Artikelsortierung: Erster Sortierungswert
 sortingPriorityCategory2Label = Empfohlene Artikelsortierung: Zweiter Sortierungswert
