--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -83,6 +83,7 @@ itemPrice_desc = "Preis ⬇"
 itemProducerName_asc = "Hersteller A-Z"
 itemProducerName_desc = "Hersteller Z-A"
 itemRecommendedSorting = "Empfohlen"
+itemRandom = "Zufällig"
 itemVariationCreateTimestamp_asc = "Älteste Artikel"
 itemVariationCreateTimestamp_desc = "Neueste Artikel"
 itemVariationCustomNumber_asc = "Variantennummer ⬆"
