--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -146,11 +146,13 @@ itemRequireAllPropertiesLabel = Require all order properties before adding an it
 itemShowCategoryFilterLabel = Show categories as filter options for search results
 
 itemListsTab = Item lists
+itemListsTagSortingLabel = Tags: Sorting
 itemListsLastSeenNumberLabel = Last seen: Number of last seen items
 itemListsLastSeenNumber4 = 4
 itemListsLastSeenNumber8 = 8
 itemListsLastSeenNumber12 = 12
 itemListsCrossSellingTypeLabel = Cross-selling: Cross-selling relation
+itemListsCrossSellingSortingLabel = Cross-Selling: Sorting
 itemListsCrossSellingTypeSimilar = Similar
 itemListsCrossSellingTypeAccessory = Accessory
 itemListsCrossSellingTypeReplacementPart = Replacement part
@@ -231,6 +233,7 @@ sortDataVariationUpdatedAtDesc = First update
 sortDataManufacturerAsc = Manufacturer A-Z
 sortDataManufacturerDesc = Manufacturer Z-A
 sortDataItemScore = Relevance
+sortDataRandom = Random
 sortDefaultSortingLabel = Default sorting value for category view
 sortingPriorityCategory1Label = Recommended item sorting: First sorting value
 sortingPriorityCategory2Label = Recommended item sorting: Second sorting value
