--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -251,6 +251,7 @@ itemProducerName_desc = "Manufacturer Z-A"
 itemRating_asc = "Customer feedback ⬆"
 itemRating_desc = "Customer feedback ⬇"
 itemRecommendedSorting = "Recommended"
+itemRandom = "Random"
 itemRelevance = "Relevance"
 itemShippingCosts = "Shipping"
 itemShowItem = "Show item"
