Refactor widget settings

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -74,9 +74,7 @@ imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
 imageCarouselCustomImagePathLabel = "Bildauswahl"
 imageCarouselCustomImagePathTooltip = "Bild auswählen. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
 imageCarouselLabel = "Bilderkarussell"
-imageCarouselSlide1 = "Slide 1"
-imageCarouselSlide2 = "Slide 2"
-imageCarouselSlide3 = "Slide 3"
+imageCarouselSlide = "Slide"
 imageCarouselVariationIdLabel = "Varianten-ID"
 imageCarouselVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie ausgewählt ist, greift die Varianten-ID nicht."
 ; Item list
