--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -74,9 +74,7 @@ imageCarouselCategoryIdTooltip = "Name and image are displayed."
 imageCarouselCustomImagePathLabel = "Image selection"
 imageCarouselCustomImagePathTooltip = "Select an image. This image replaces the category or variation image."
 imageCarouselLabel = "Image carousel"
-imageCarouselSlide1 = "Slide 1"
-imageCarouselSlide2 = "Slide 2"
-imageCarouselSlide3 = "Slide 3"
+imageCarouselSlide = "Slide"
 imageCarouselVariationIdLabel = "Variation ID"
 imageCarouselVariationIdTooltip = "Name and image are displayed. If a category has been selected, the variation ID does not apply."
 ; Item list
