CHANGE ImageBoxWidget - update widget's json to the new structure. Also add setting "headline" to enter a custom headline

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -54,6 +54,8 @@ imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
 imageBoxCustomImagePathLabel = "Image selection"
 imageBoxCustomImagePathTooltip = "Select an image. This image replaces the category or variation image."
+imageBoxHeadlineLabel = "List headline"
+imageBoxHeadlineTooltip = "Enter the text for the headline. This text replaces the name of the category or the article."
 imageBoxImageSizeContain = "Resized"
 imageBoxImageSizeCover = "Fullwidth"
 imageBoxImageSizeLabel = "Image size"
@@ -62,8 +64,8 @@ imageBoxLabel = "Image box"
 imageBoxPlaceholderName = "Name"
 imageBoxStyleBlockCaption = "Image and text(full footer)"
 imageBoxStyleFullwidth = "Image and text (full area)"
-imageBoxStyleLabel = "Box style"
 imageBoxStyleInlineCaption = "Image and text (small)"
+imageBoxStyleLabel = "Box style"
 imageBoxStyleNoCaption = "Image without text"
 imageBoxStyleTooltip = "Select box style"
 imageBoxVariationIdLabel = "Variation ID"
