CHANGE Widget.properties - change translation string for image box headline

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -55,7 +55,7 @@ imageBoxCategoryIdTooltip = "Name and image are displayed."
 imageBoxCustomImagePathLabel = "Image selection"
 imageBoxCustomImagePathTooltip = "Select an image. This image replaces the category or variation image."
 imageBoxHeadlineLabel = "List headline"
-imageBoxHeadlineTooltip = "Enter the text for the headline. This text replaces the name of the category or the article."
+imageBoxHeadlineTooltip = "Enter the text for the list headline. This text replaces the name of the category or the article."
 imageBoxImageSizeContain = "Resized"
 imageBoxImageSizeCover = "Fullwidth"
 imageBoxImageSizeLabel = "Image size"
