--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -73,6 +73,8 @@ imageCarouselCategoryIdLabel = "Kategorie"
 imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
 imageCarouselCustomImagePathLabel = "Bildauswahl"
 imageCarouselCustomImagePathTooltip = "Bild auswählen. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
+imageCarouselHeadlineLabel = "Bildüberschrift"
+imageCarouselHeadlineTooltip = "Überschrift für das Bild eingeben."
 imageCarouselLabel = "Bilderkarussell"
 imageCarouselSlide = "Slide"
 imageCarouselVariationIdLabel = "Varianten-ID"
