changed translation text

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -8,8 +8,8 @@ breadcrumbShowOnMyAccountLabel = "Im Bereich Mein Konto anzeigen"
 containerFooter = "Fußzeile"
 containerHeader = "Kopfzeile"
 containerHomepage = "Startseite"
-presetFooterDefault = "Standard-Fußzeile"
-presetHeaderDefault = "Standard-Kopfzeile"
+presetFooterDefault = "Standard-Footer"
+presetHeaderDefault = "Standard-Header"
 presetHomepageDefault = "Standard-Startseite"
 ; Global
 widgetAppearanceDanger = "Gefahr"
