CHANGE Widget.properties - add first translations for item list widget's new settings

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -95,6 +95,13 @@ itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
+itemListCaptionLabel = "Stil der Überschrift"
+itemListCaptionTooltip = "Stil der Überschrift wählen."
+itemListCaptionDefault = "Standardüberschrift"
+itemListCaptionCustom = "Eigene Überschrift"
+itemListCaptionNoCaption = "Keine Überschrift"
+itemListHeadlineLabel = "Listenüberschrift"
+itemListHeadlineTooltip = "Text für die Listenüberschrift eingeben. Dieser Text ersetzt den Namen der Artikelliste."
 ; Item sort
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
