--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -95,6 +95,13 @@ itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
+itemListCaptionLabel = "Stil der Überschrift"
+itemListCaptionTooltip = "Stil der Überschrift wählen."
+itemListCaptionDefault = "Standard caption"
+itemListCaptionCustom = "Own caption"
+itemListCaptionNoCaption = "No caption"
+itemListHeadlineLabel = "List headline"
+itemListHeadlineTooltip = "Enter the text for the list headline. This text replaces the name of the item list."
 ; Item sort
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
