CHANGE Widget.properties - add english translations for new item list widget's settings

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -78,8 +78,15 @@ imageCarouselSlide = "Slide"
 imageCarouselVariationIdLabel = "Varianten-ID"
 imageCarouselVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie ausgewählt ist, greift die Varianten-ID nicht."
 ; Item list
+itemListCaptionCustom = "Eigene Überschrift"
+itemListCaptionDefault = "Standardüberschrift"
+itemListCaptionLabel = "Art der Überschrift"
+itemListCaptionNoCaption = "Keine Überschrift"
+itemListCaptionTooltip = "Art der Überschrift wählen."
 itemListCategoryIdLabel = "Kategorie"
 itemListCategoryIdTooltip = "Kategorie wählen, anhand welcher die Artikelliste erstellt wird."
+itemListHeadlineLabel = "Listenüberschrift"
+itemListHeadlineTooltip = "Text für die Listenüberschrift eingeben. Dieser Text ersetzt den Namen der Artikelliste."
 itemListItemSortLabel = "Artikelsortierung"
 itemListItemSortTooltip = "Art der Artikelsortierung wählen."
 itemListLabel = "Artikelliste"
@@ -95,13 +102,6 @@ itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
-itemListCaptionLabel = "Stil der Überschrift"
-itemListCaptionTooltip = "Stil der Überschrift wählen."
-itemListCaptionDefault = "Standardüberschrift"
-itemListCaptionCustom = "Eigene Überschrift"
-itemListCaptionNoCaption = "Keine Überschrift"
-itemListHeadlineLabel = "Listenüberschrift"
-itemListHeadlineTooltip = "Text für die Listenüberschrift eingeben. Dieser Text ersetzt den Namen der Artikelliste."
 ; Item sort
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
