--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -78,8 +78,15 @@ imageCarouselSlide = "Slide"
 imageCarouselVariationIdLabel = "Variation ID"
 imageCarouselVariationIdTooltip = "Name and image are displayed. If a category has been selected, the variation ID does not apply."
 ; Item list
+itemListCaptionCustom = "Own caption"
+itemListCaptionDefault = "Standard caption"
+itemListCaptionLabel = "Caption type"
+itemListCaptionNoCaption = "No caption"
+itemListCaptionTooltip = "Select caption type."
 itemListCategoryIdLabel = "Category"
 itemListCategoryIdTooltip = "Select the category from which the item list is generated."
+itemListHeadlineLabel = "List headline"
+itemListHeadlineTooltip = "Enter the text for the list headline. This text replaces the name of the item list."
 itemListItemSortLabel = "Item sorting"
 itemListItemSortTooltip = "Select the type of item sorting."
 itemListLabel = "Item list"
@@ -95,13 +102,6 @@ itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
-itemListCaptionLabel = "Stil der Überschrift"
-itemListCaptionTooltip = "Stil der Überschrift wählen."
-itemListCaptionDefault = "Standard caption"
-itemListCaptionCustom = "Own caption"
-itemListCaptionNoCaption = "No caption"
-itemListHeadlineLabel = "List headline"
-itemListHeadlineTooltip = "Enter the text for the list headline. This text replaces the name of the item list."
 ; Item sort
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
