--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -54,8 +54,8 @@ imageBoxCategoryIdLabel = "Kategorie"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
 imageBoxCustomImagePathLabel = "Bildauswahl"
 imageBoxCustomImagePathTooltip = "Bild auswählen. Dieses Bild ersetzt das Bild der Kategorie oder der Variante."
-imageBoxHeadlineLabel = "Listenüberschrift"
-imageBoxHeadlineTooltip = "Text für die Listenüberschrift eingeben. Dieser Text ersetzt den Namen der Kategorie oder des Artikels."
+imageBoxHeadlineLabel = "Titel der Bilderbox"
+imageBoxHeadlineTooltip = "Text für den Titel eingeben. Dieser Text ersetzt den Namen der Kategorie oder des Artikels."
 imageBoxImageSizeContain = "Skaliert"
 imageBoxImageSizeCover = "Volle Breite"
 imageBoxImageSizeLabel = "Größe des Bilds"
