--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -54,8 +54,8 @@ imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
 imageBoxCustomImagePathLabel = "Image selection"
 imageBoxCustomImagePathTooltip = "Select an image. This image replaces the category or variation image."
-imageBoxHeadlineLabel = "List headline"
-imageBoxHeadlineTooltip = "Enter the text for the list headline. This text replaces the name of the category or the article."
+imageBoxHeadlineLabel = "Image box title"
+imageBoxHeadlineTooltip = "Enter the text for the title. This text replaces the name of the category or the item."
 imageBoxImageSizeContain = "Resized"
 imageBoxImageSizeCover = "Fullwidth"
 imageBoxImageSizeLabel = "Image size"
