CHANGE ImageCarouselWidget - add dropdown to choose the type of the caption.

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -71,6 +71,11 @@ imageBoxStyleTooltip = "Stil der Box auswählen."
 imageBoxVariationIdLabel = "Varianten-ID"
 imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie ausgewählt ist, greift die Varianten-ID nicht."
 ; Image carousel
+imageCarouselCaptionCustom = "Eigene Überschrift"
+imageCarouselCaptionDefault = "Standardüberschrift"
+imageCarouselCaptionLabel = "Art der Überschrift"
+imageCarouselCaptionNoCaption = "Keine Überschrift"
+imageCarouselCaptionTooltip = "Art der Überschrift wählen."
 imageCarouselCategoryIdLabel = "Kategorie"
 imageCarouselCategoryIdTooltip = "Name und Bild werden angezeigt."
 imageCarouselCustomImagePathLabel = "Bildauswahl"
