--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -71,6 +71,11 @@ imageBoxStyleTooltip = "Select box style"
 imageBoxVariationIdLabel = "Variation ID"
 imageBoxVariationIdTooltip = "Name and image are displayed. If a category has been selected, the variation ID does not apply."
 ; Image carousel
+imageCarouselCaptionCustom = "Own caption"
+imageCarouselCaptionDefault = "Standard caption"
+imageCarouselCaptionLabel = "Caption type"
+imageCarouselCaptionNoCaption = "No caption"
+imageCarouselCaptionTooltip = "Select caption type."
 imageCarouselCategoryIdLabel = "Category"
 imageCarouselCategoryIdTooltip = "Name and image are displayed."
 imageCarouselCustomImagePathLabel = "Image selection"
