ADD more specific errors to checkout

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -86,6 +86,10 @@ checkoutBasket = "Shopping cart"
 checkoutBuyNow = "Order now"
 checkoutCancellationRight = "Cancellation:hyphen rights"
 checkoutCheckEntries = "Please check the entries."
+checkoutCheckAcceptGtc = "Bitte TODO"
+checkoutCheckPaymentProvider = "Bitte Bezahlart auswählen"
+checkoutCheckShippingProfile = "Bitte Versanddienstleister auswählen"
+checkoutCheckInvoiceAddress = "Bitte Rechnungsaddresse auswählen"
 checkoutChooseOur = "Please accept our :gtc, :cancellation and :policy."
 checkoutContactWish = "Notes and requests"
 checkoutContactWishMessage = "Enter your message to us here."
