ADD texts for the notifications

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -86,10 +86,10 @@ checkoutBasket = "Warenkorb"
 checkoutBuyNow = "Kaufen"
 checkoutCancellationRight = "Widerrufs:hyphenrecht"
 checkoutCheckEntries = "Bitte Eingaben prüfen."
-checkoutCheckAcceptGtc = "Bitte TODO"
-checkoutCheckPaymentProvider = "Bitte Bezahlart auswählen"
-checkoutCheckShippingProfile = "Bitte Versanddienstleister auswählen"
-checkoutCheckInvoiceAddress = "Bitte Rechnungsaddresse auswählen"
+checkoutCheckAcceptGtc = "Bitte AGB, Widerrufsrecht und Datenschutzerklärung akzeptieren."
+checkoutCheckPaymentProvider = "Bitte Zahlungsart auswählen."
+checkoutCheckShippingProfile = "Bitte Versanddienstleister auswählen."
+checkoutCheckInvoiceAddress = "Bitte Rechnungsaddresse auswählen."
 checkoutChooseOur = "Bitte nehmen Sie unsere :gtc, :cancellation und :policy zur Kenntnis."
 checkoutContactWish = "Hinweise und Wünsche"
 checkoutContactWishMessage = "Geben Sie hier Ihre Nachricht an uns ein."
