feature_contact_form_specific_erros: - added contact form validation errors to notification

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -121,6 +121,7 @@ contactAcceptPrivacyPolicy = "Hiermit bestätige ich, dass ich die :policy geles
 contactCheckEntries = "Bitte Eingaben prüfen."
 contactEditMessage = "Bitte geben Sie eine Nachricht ein."
 contactEditSubject = "Bitte geben Sie einen Betreff ein."
+contactAcceptFormPrivacyPolicy = "Bitte akzeptieren Sie die Daten:hyphenschutz:hyphenerklärung."
 contactEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
 contactMail = "E-Mail"
 contactMessage = "Nachricht"
