--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -121,6 +121,7 @@ contactAcceptPrivacyPolicy = "I hereby confirm that I have read the :policy."
 contactCheckEntries = "Please check the entries."
 contactEditMessage = "Please enter a message."
 contactEditSubject = "Please enter a subject."
+contactAcceptFormPrivacyPolicy = "Please accept the Privacy:hyphen policy."
 contactEnterConfirmEmail = "Please enter a valid email address."
 contactMail = "Email"
 contactMessage = "Message"
